data/rq2/deepseek/rust_code/final_projects/quadtree/translate_by_qwen3_coder/preprocessed_header.h

typedef struct quadtree_point {
  double x;
  double y;
} quadtree_point_t;
typedef struct quadtree_bounds {
  quadtree_point_t *nw;
  quadtree_point_t *se;
  double width;
  double height;
} quadtree_bounds_t;
typedef struct quadtree_node {
  struct quadtree_node *ne;
  struct quadtree_node *nw;
  struct quadtree_node *se;
  struct quadtree_node *sw;
  quadtree_bounds_t *bounds;
  quadtree_point_t *point;
  void *key;
} quadtree_node_t;
quadtree_node_t*
quadtree_node_new();
void
quadtree_node_free(quadtree_node_t *node, void (*value_free)(void*));
int
quadtree_node_ispointer(quadtree_node_t *node);
int
quadtree_node_isempty(quadtree_node_t *node);
int
quadtree_node_isleaf(quadtree_node_t *node);
void
quadtree_node_reset(quadtree_node_t* node, void (*key_free)(void*));
quadtree_node_t*
quadtree_node_with_bounds(double minx, double miny, double maxx, double maxy);