data/paper_artifacts/deepseek_v4_pro_oss8_0613_rq2_100pct_minimal/projects/quadtree/.c2r_bindgen_fns/node_b0f26c01.fns.rs

/* automatically generated by rust-bindgen 0.72.1 */

unsafe extern "C" {
    pub fn quadtree_node_new() -> *mut quadtree_node_t;
}
unsafe extern "C" {
    pub fn quadtree_node_free(
        node: *mut quadtree_node_t,
        value_free: ::core::option::Option<unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void)>,
    );
}
unsafe extern "C" {
    pub fn quadtree_node_ispointer(node: *mut quadtree_node_t) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn quadtree_node_isempty(node: *mut quadtree_node_t) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn quadtree_node_isleaf(node: *mut quadtree_node_t) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn quadtree_node_reset(
        node: *mut quadtree_node_t,
        key_free: ::core::option::Option<unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void)>,
    );
}
unsafe extern "C" {
    pub fn quadtree_node_with_bounds(
        minx: f64,
        miny: f64,
        maxx: f64,
        maxy: f64,
    ) -> *mut quadtree_node_t;
}
